First version that works properly w/ orca ioc. Generates a warning during build, as the m_delay type is now double, but record still uses integers. Need to change the delay value from an integer number of fiducials to a floating point delay in seconds.
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/trunk/pcds/epics/modules/timeStampFifo/current@19916 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/tsFifoLib/Makefile
+++ b/tsFifoLib/Makefile
@@ -9,7 +9,7 @@ LIB_SRCS += timeStampFifo.cpp
 
 DBD += timeStampFifo.dbd
 
-DB  += timeStampFifo.db
+DB  += timeStampFifo.template
 
 #=============================
 
