Took INP field out of autosave
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/trunk/pcds/epics/modules/timeStampFifo/current@21259 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/tsFifoLib/timeStampFifo.template
+++ b/tsFifoLib/timeStampFifo.template
@@ -51,7 +51,7 @@ record( longin, "$(DEV):EventCode_RBV" )
 {
   field( DESC, "Event code readback" )
   field( INP,  "$(EC_PV_RBV=$(EC_PV)) CPP MS" )
-  info(  autosaveFields, "DESC INP" )
+  info(  autosaveFields, "DESC" )
 }
 
 
