Cleaned up how EC_PV macro is handled
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/trunk/pcds/epics/modules/timeStampFifo/current@24617 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/tsFifoLib/timeStampFifo.template
+++ b/tsFifoLib/timeStampFifo.template
@@ -36,11 +36,11 @@ record( aSub, "$(DEV):UpdateParams" )
   field( SCAN, "Passive" )
   field( INAM, "TSFifo_Init" )
   field( SNAM, "TSFifo_Process" )
-  field( FTA,  "STRING" ) field( INPA, "$(PORT_PV) CPP MS" )
-  field( FTB,  "LONG"   ) field( INPB, "$(EC_PV) CPP MS" )
-  field( FTC,  "LONG"   ) field( INPC, "$(GEN_PV=$(DEV):Gen) CPP MS" )
-  field( FTD,  "DOUBLE" ) field( INPD, "$(TSDLY_PV=$(DEV):ExpectedDelay) CPP MS" )
-  field( FTE,  "LONG"   ) field( INPE, "$(DEV):TsPolicy CPP MS" )
+  field( FTA,  "STRING" ) field( INPA, "$(PORT_PV) CPP NMS" )
+  field( FTB,  "LONG"   ) field( INPB, "$(DEV):EventCode_RBV CPP NMS" )
+  field( FTC,  "LONG"   ) field( INPC, "$(GEN_PV=$(DEV):Gen) CPP NMS" )
+  field( FTD,  "DOUBLE" ) field( INPD, "$(TSDLY_PV=$(DEV):ExpectedDelay) CPP NMS" )
+  field( FTE,  "LONG"   ) field( INPE, "$(DEV):TsPolicy CPP NMS" )
 
   field( OUTA, "$(DEV):SyncStatus PP MS" )
   field( FTVA, "LONG"   )
@@ -50,7 +50,7 @@ record( aSub, "$(DEV):UpdateParams" )
 record( longin, "$(DEV):EventCode_RBV" )
 {
   field( DESC, "Event code readback" )
-  field( INP,  "$(EC_PV_RBV=$(EC_PV)) CPP MS" )
+  field( INP,  "$(EC_PV) CPP MS" )
   info(  autosaveFields, "DESC" )
 }
 
